k8s/springboot-demo-depployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: springboot-demo
  name: springboot-demo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: springboot-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springboot-demo
    spec:
      containers:
      - image: docker.io/wspark83/springboot:demo-v1.1
        imagePullPolicy: IfNotPresent
        name: springboot
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
